--- a/WideResNet.ipynb
+++ b/WideResNet.ipynb
@@ -102,132 +102,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_block_number = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widen_factor = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wrn = model.WideResNet(\n",
-    "    dataset,\n",
-    "    dataset_config['size'],\n",
-    "    dataset_config['channels'],\n",
-    "    dataset_config['classes'],\n",
-    "    total_block_number=total_block_number,\n",
-    "    widen_factor=widen_factor,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WideResNet(\n",
-       "  (sequential): Sequential(\n",
-       "    (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "    (1): ResidualBlockGroup(\n",
-       "      (sequential): Sequential(\n",
-       "        (0): ResidualBlock(\n",
-       "          (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu1): ReLU(inplace)\n",
-       "          (conv1): Conv2d(16, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu2): ReLU(inplace)\n",
-       "          (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (conv_transform): Conv2d(16, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "        )\n",
-       "        (1): ResidualBlock(\n",
-       "          (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu1): ReLU(inplace)\n",
-       "          (conv1): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu2): ReLU(inplace)\n",
-       "          (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (2): ResidualBlockGroup(\n",
-       "      (sequential): Sequential(\n",
-       "        (0): ResidualBlock(\n",
-       "          (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu1): ReLU(inplace)\n",
-       "          (conv1): Conv2d(160, 320, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "          (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu2): ReLU(inplace)\n",
-       "          (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (conv_transform): Conv2d(160, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        )\n",
-       "        (1): ResidualBlock(\n",
-       "          (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu1): ReLU(inplace)\n",
-       "          (conv1): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu2): ReLU(inplace)\n",
-       "          (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (3): ResidualBlockGroup(\n",
-       "      (sequential): Sequential(\n",
-       "        (0): ResidualBlock(\n",
-       "          (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu1): ReLU(inplace)\n",
-       "          (conv1): Conv2d(320, 640, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "          (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu2): ReLU(inplace)\n",
-       "          (conv2): Conv2d(640, 640, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (conv_transform): Conv2d(320, 640, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        )\n",
-       "        (1): ResidualBlock(\n",
-       "          (bn1): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu1): ReLU(inplace)\n",
-       "          (conv1): Conv2d(640, 640, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "          (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (relu2): ReLU(inplace)\n",
-       "          (conv2): Conv2d(640, 640, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (4): AvgPool2d(kernel_size=8, stride=8, padding=0)\n",
-       "    (5): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (6): ReLU(inplace)\n",
-       "    (7): LambdaModule()\n",
-       "    (8): Linear(in_features=640, out_features=10, bias=True)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wrn.cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -304,31 +178,43 @@
        "      (6): ReLU(inplace)\n",
        "      (7): LambdaModule()\n",
        "      (8): Linear(in_features=640, out_features=10, bias=True)\n",
+       "      (9): LambdaModule()\n",
        "    )\n",
        "  ),\n",
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "net = skorch.net.NeuralNetClassifier(\n",
-    "    module=wrn,\n",
+    "    module=model.WideResNet(\n",
+    "        dataset,\n",
+    "        dataset_config['size'],\n",
+    "        dataset_config['channels'],\n",
+    "        dataset_config['classes'],\n",
+    "        total_block_number=6,\n",
+    "        widen_factor=10,\n",
+    "    ),\n",
+    "    batch_size=32,\n",
     "    max_epochs=10,\n",
     "    optimizer=torch.optim.Adam,\n",
     "    callbacks=[\n",
     "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/wrn{last_epoch[epoch]}.pt\", monitor=None))\n",
     "    ],\n",
+    "    device='cuda',\n",
+    "    train_split=None, # Workaround for https://github.com/dnouri/skorch/issues/218\n",
+    "    lr=1e-04,\n",
     ")\n",
     "net.initialize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,11 +246,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/project-root/model.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self.f(x)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checkpoint! Saving model to models/wrn1.pt.\n",
+      "  epoch    train_loss       dur\n",
+      "-------  ------------  --------\n",
+      "      1        \u001b[36m0.4006\u001b[0m  125.9197\n",
+      "Checkpoint! Saving model to models/wrn2.pt.\n",
+      "      2        \u001b[36m0.2326\u001b[0m  126.5087\n",
+      "Checkpoint! Saving model to models/wrn3.pt.\n",
+      "      3        \u001b[36m0.1782\u001b[0m  127.1159\n",
+      "Checkpoint! Saving model to models/wrn4.pt.\n",
+      "      4        \u001b[36m0.1348\u001b[0m  126.9946\n",
+      "Checkpoint! Saving model to models/wrn5.pt.\n",
+      "      5        \u001b[36m0.0993\u001b[0m  127.0145\n",
+      "Checkpoint! Saving model to models/wrn6.pt.\n",
+      "      6        \u001b[36m0.0736\u001b[0m  126.2018\n",
+      "Checkpoint! Saving model to models/wrn7.pt.\n",
+      "      7        \u001b[36m0.0575\u001b[0m  126.5998\n",
+      "Checkpoint! Saving model to models/wrn8.pt.\n",
+      "      8        \u001b[36m0.0455\u001b[0m  126.9306\n",
+      "Checkpoint! Saving model to models/wrn9.pt.\n",
+      "      9        \u001b[36m0.0371\u001b[0m  126.8832\n",
+      "Checkpoint! Saving model to models/wrn10.pt.\n",
+      "     10        \u001b[36m0.0326\u001b[0m  126.8877\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<class 'skorch.net.NeuralNetClassifier'>[initialized](\n",
+       "  module_=WideResNet(\n",
+       "    (sequential): Sequential(\n",
+       "      (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): ResidualBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(16, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (conv_transform): Conv2d(16, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (1): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (2): ResidualBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(160, 320, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (conv_transform): Conv2d(160, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (1): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (3): ResidualBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(320, 640, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(640, 640, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (conv_transform): Conv2d(320, 640, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (1): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(640, 640, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(640, 640, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (4): AvgPool2d(kernel_size=8, stride=8, padding=0)\n",
+       "      (5): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (6): ReLU(inplace)\n",
+       "      (7): LambdaModule()\n",
+       "      (8): Linear(in_features=640, out_features=10, bias=True)\n",
+       "      (9): LambdaModule()\n",
+       "    )\n",
+       "  ),\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "net.fit_loop(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/project-root/model.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self.f(x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction_test = net.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9255"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(prediction_test == y_test).mean()"
    ]
   },
   {
