--- a/WideResNet.ipynb
+++ b/WideResNet.ipynb
@@ -234,7 +234,7 @@
     "        widen_factor=5,\n",
     "    ),\n",
     "    batch_size=32,\n",
-    "    max_epochs=10,\n",
+    "    max_epochs=30,\n",
     "    optimizer=torch.optim.Adam,\n",
     "    callbacks=[\n",
     "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/wrn{last_epoch[epoch]}.pt\", monitor=None))\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,22 +290,199 @@
       "Checkpoint! Saving model to models/wrn1.pt.\n",
       "  epoch    train_loss      dur\n",
       "-------  ------------  -------\n",
-      "      1        \u001b[36m0.4319\u001b[0m  91.6270\n",
+      "      1        \u001b[36m0.4446\u001b[0m  91.2190\n",
       "Checkpoint! Saving model to models/wrn2.pt.\n",
-      "      2        \u001b[36m0.2350\u001b[0m  94.8131\n",
+      "      2        \u001b[36m0.2351\u001b[0m  93.5893\n",
       "Checkpoint! Saving model to models/wrn3.pt.\n",
-      "      3        \u001b[36m0.1803\u001b[0m  95.1120\n",
+      "      3        \u001b[36m0.1763\u001b[0m  94.7007\n",
       "Checkpoint! Saving model to models/wrn4.pt.\n",
-      "      4        \u001b[36m0.1356\u001b[0m  94.9487\n",
+      "      4        \u001b[36m0.1320\u001b[0m  94.9031\n",
       "Checkpoint! Saving model to models/wrn5.pt.\n",
-      "      5        \u001b[36m0.1011\u001b[0m  95.7791\n",
+      "      5        \u001b[36m0.0969\u001b[0m  95.4812\n",
       "Checkpoint! Saving model to models/wrn6.pt.\n",
-      "      6        \u001b[36m0.0763\u001b[0m  94.9037\n",
+      "      6        \u001b[36m0.0761\u001b[0m  95.5099\n",
       "Checkpoint! Saving model to models/wrn7.pt.\n",
-      "      7        \u001b[36m0.0622\u001b[0m  95.6675\n",
+      "      7        \u001b[36m0.0610\u001b[0m  95.4205\n",
       "Checkpoint! Saving model to models/wrn8.pt.\n",
-      "      8        \u001b[36m0.0499\u001b[0m  95.0206\n"
+      "      8        \u001b[36m0.0497\u001b[0m  96.3754\n",
+      "Checkpoint! Saving model to models/wrn9.pt.\n",
+      "      9        \u001b[36m0.0404\u001b[0m  96.5102\n",
+      "Checkpoint! Saving model to models/wrn10.pt.\n",
+      "     10        \u001b[36m0.0384\u001b[0m  96.2645\n",
+      "Checkpoint! Saving model to models/wrn11.pt.\n",
+      "     11        \u001b[36m0.0315\u001b[0m  96.4558\n",
+      "Checkpoint! Saving model to models/wrn12.pt.\n",
+      "     12        \u001b[36m0.0284\u001b[0m  96.3187\n",
+      "Checkpoint! Saving model to models/wrn13.pt.\n",
+      "     13        \u001b[36m0.0259\u001b[0m  96.3132\n",
+      "Checkpoint! Saving model to models/wrn14.pt.\n",
+      "     14        0.0262  95.8699\n",
+      "Checkpoint! Saving model to models/wrn15.pt.\n",
+      "     15        \u001b[36m0.0229\u001b[0m  95.9501\n",
+      "Checkpoint! Saving model to models/wrn16.pt.\n",
+      "     16        \u001b[36m0.0207\u001b[0m  96.4933\n",
+      "Checkpoint! Saving model to models/wrn17.pt.\n",
+      "     17        \u001b[36m0.0198\u001b[0m  96.2652\n",
+      "Checkpoint! Saving model to models/wrn18.pt.\n",
+      "     18        \u001b[36m0.0187\u001b[0m  95.9166\n",
+      "Checkpoint! Saving model to models/wrn19.pt.\n",
+      "     19        \u001b[36m0.0176\u001b[0m  95.7999\n",
+      "Checkpoint! Saving model to models/wrn20.pt.\n",
+      "     20        \u001b[36m0.0163\u001b[0m  96.1245\n",
+      "Checkpoint! Saving model to models/wrn21.pt.\n",
+      "     21        \u001b[36m0.0148\u001b[0m  96.0002\n",
+      "Checkpoint! Saving model to models/wrn22.pt.\n",
+      "     22        \u001b[36m0.0145\u001b[0m  95.9272\n",
+      "Checkpoint! Saving model to models/wrn23.pt.\n",
+      "     23        \u001b[36m0.0142\u001b[0m  96.4364\n",
+      "Checkpoint! Saving model to models/wrn24.pt.\n",
+      "     24        \u001b[36m0.0129\u001b[0m  96.3498\n",
+      "Checkpoint! Saving model to models/wrn25.pt.\n",
+      "     25        \u001b[36m0.0124\u001b[0m  97.0600\n",
+      "Checkpoint! Saving model to models/wrn26.pt.\n",
+      "     26        0.0124  96.7308\n",
+      "Checkpoint! Saving model to models/wrn27.pt.\n",
+      "     27        \u001b[36m0.0121\u001b[0m  96.6798\n",
+      "Checkpoint! Saving model to models/wrn28.pt.\n",
+      "     28        0.0123  96.8512\n",
+      "Checkpoint! Saving model to models/wrn29.pt.\n",
+      "     29        \u001b[36m0.0102\u001b[0m  97.1368\n",
+      "Checkpoint! Saving model to models/wrn30.pt.\n",
+      "     30        0.0107  97.2528\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<class 'skorch.net.NeuralNetClassifier'>[initialized](\n",
+       "  module_=WideResNet(\n",
+       "    (sequential): Sequential(\n",
+       "      (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): ResidualBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(16, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (conv_transform): Conv2d(16, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (1): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (2): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (3): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(80, 80, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (2): ResidualBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(80, 160, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (conv_transform): Conv2d(80, 160, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (1): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (2): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (3): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(160, 160, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (3): ResidualBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(160, 320, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (conv_transform): Conv2d(160, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (1): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (2): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (3): ResidualBlock(\n",
+       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): Conv2d(320, 320, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (4): AvgPool2d(kernel_size=8, stride=8, padding=0)\n",
+       "      (5): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (6): ReLU(inplace)\n",
+       "      (7): LambdaModule()\n",
+       "      (8): Linear(in_features=320, out_features=10, bias=True)\n",
+       "      (9): LambdaModule()\n",
+       "    )\n",
+       "  ),\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -314,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +500,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.927"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(prediction_test == y_test).mean()"
    ]
