--- a/Offnet.ipynb
+++ b/Offnet.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +95,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Offnet(\n",
+       "  (sequential): Sequential(\n",
+       "    (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (1): OffBlockGroup(\n",
+       "      (sequential): Sequential(\n",
+       "        (0): OffBlock(\n",
+       "          (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu1): ReLU(inplace)\n",
+       "          (conv1): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(16, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(144, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu2): ReLU(inplace)\n",
+       "          (conv2): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(720, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (conv_transform): Conv2d(16, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        )\n",
+       "        (1): OffBlock(\n",
+       "          (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu1): ReLU(inplace)\n",
+       "          (conv1): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(720, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu2): ReLU(inplace)\n",
+       "          (conv2): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(720, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (2): OffBlockGroup(\n",
+       "      (sequential): Sequential(\n",
+       "        (0): OffBlock(\n",
+       "          (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu1): ReLU(inplace)\n",
+       "          (conv1): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(720, 160, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu2): ReLU(inplace)\n",
+       "          (conv2): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (conv_transform): Conv2d(80, 160, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        )\n",
+       "        (1): OffBlock(\n",
+       "          (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu1): ReLU(inplace)\n",
+       "          (conv1): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu2): ReLU(inplace)\n",
+       "          (conv2): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (3): OffBlockGroup(\n",
+       "      (sequential): Sequential(\n",
+       "        (0): OffBlock(\n",
+       "          (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu1): ReLU(inplace)\n",
+       "          (conv1): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(1440, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu2): ReLU(inplace)\n",
+       "          (conv2): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (conv_transform): Conv2d(160, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        )\n",
+       "        (1): OffBlock(\n",
+       "          (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu1): ReLU(inplace)\n",
+       "          (conv1): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (relu2): ReLU(inplace)\n",
+       "          (conv2): FakeConv2d(\n",
+       "            (deform): Deform2d(\n",
+       "              (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "            )\n",
+       "            (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (4): AvgPool2d(kernel_size=8, stride=8, padding=0)\n",
+       "    (5): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (6): ReLU(inplace)\n",
+       "    (7): LambdaModule()\n",
+       "    (8): Linear(in_features=320, out_features=10, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Offnet(\n",
     "    dataset,\n",
@@ -111,11 +256,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'skorch.classifier.NeuralNetClassifier'>[initialized](\n",
+       "  module_=Offnet(\n",
+       "    (sequential): Sequential(\n",
+       "      (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): OffBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): OffBlock(\n",
+       "            (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(16, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(144, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(720, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (conv_transform): Conv2d(16, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "          )\n",
+       "          (1): OffBlock(\n",
+       "            (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(720, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (bn2): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(720, 80, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (2): OffBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): OffBlock(\n",
+       "            (bn1): BatchNorm2d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(80, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(720, 160, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "            )\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (conv_transform): Conv2d(80, 160, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (1): OffBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (3): OffBlockGroup(\n",
+       "        (sequential): Sequential(\n",
+       "          (0): OffBlock(\n",
+       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(1440, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "            )\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (conv_transform): Conv2d(160, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "          )\n",
+       "          (1): OffBlock(\n",
+       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu1): ReLU(inplace)\n",
+       "            (conv1): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            (relu2): ReLU(inplace)\n",
+       "            (conv2): FakeConv2d(\n",
+       "              (deform): Deform2d(\n",
+       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
+       "              )\n",
+       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (4): AvgPool2d(kernel_size=8, stride=8, padding=0)\n",
+       "      (5): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (6): ReLU(inplace)\n",
+       "      (7): LambdaModule()\n",
+       "      (8): Linear(in_features=320, out_features=10, bias=True)\n",
+       "    )\n",
+       "  ),\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "net = skorch.net.NeuralNetClassifier(\n",
+    "net = skorch.NeuralNetClassifier(\n",
     "    module=model.Offnet(\n",
     "        dataset,\n",
     "        dataset_config['size'],\n",
@@ -131,8 +421,8 @@
     "    callbacks=[\n",
     "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/untrainable_wrn{last_epoch[epoch]}.pt\", monitor=None))\n",
     "    ],\n",
-    "    device='cuda',\n",
-    "    train_split=None, # Workaround for https://github.com/dnouri/skorch/issues/218\n",
+    "    device='cuda' if torch.cuda.is_available() else 'cpu',\n",
+    "    #train_split=None, # Workaround for https://github.com/dnouri/skorch/issues/218\n",
     "    lr=1e-04,\n",
     ")\n",
     "net.initialize()"
@@ -140,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
