--- a/WideResNet.ipynb
+++ b/WideResNet.ipynb
@@ -64,6 +64,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -230,17 +239,17 @@
     "        dataset_config['size'],\n",
     "        dataset_config['channels'],\n",
     "        dataset_config['classes'],\n",
-    "        total_block_number=12,\n",
-    "        widen_factor=5,\n",
+    "        total_block_number=24,\n",
+    "        widen_factor=10,\n",
     "    ),\n",
-    "    batch_size=32,\n",
-    "    max_epochs=30,\n",
+    "    batch_size=16,\n",
+    "    max_epochs=10,\n",
     "    optimizer=torch.optim.Adam,\n",
     "    callbacks=[\n",
+    "        ('progress_bar', skorch.callbacks.ProgressBar()),\n",
     "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/wrn{last_epoch[epoch]}.pt\", monitor=None))\n",
     "    ],\n",
-    "    device='cuda',\n",
-    "    train_split=None, # Workaround for https://github.com/dnouri/skorch/issues/218\n",
+    "    device='cuda' if torch.cuda.is_available() else 'cpu',\n",
     "    lr=1e-04,\n",
     ")\n",
     "net.initialize()"
@@ -257,13 +266,6 @@
     "    number_of_images, height, width = pad_images.shape\n",
     "    return pad_images.reshape(number_of_images, 1, height, width).astype(np.float32)  / 255.0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -486,7 +488,13 @@
     }
    ],
    "source": [
-    "net.fit_loop(x_train, y_train)"
+    "def error_rate(test_batch_size = 16):\n",
+    "    number_of_test_images = x_test.shape[0]\n",
+    "    number_of_error_images = 0\n",
+    "    for start in range(0, number_of_test_images, test_batch_size):\n",
+    "        end = min(start + test_batch_size, number_of_test_images)\n",
+    "        number_of_error_images += int((net.predict(x_test[start:end]) != y_test[start:end]).sum())\n",
+    "    return number_of_error_images / number_of_test_images"
    ]
   },
   {
@@ -495,27 +503,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_test = net.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.927"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(prediction_test == y_test).mean()"
+    "for _ in range(200):\n",
+    "    net.fit_loop(x_train, y_train)\n",
+    "    prediction_test = net.predict(x_test)\n",
+    "    error = (prediction_test != y_test).mean()\n",
+    "    print(\"error: \", error_rate())"
    ]
   }
  ],
@@ -535,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
