Use SGD optimizer

--- a/WideResNet.ipynb
+++ b/WideResNet.ipynb
@@ -40,23 +40,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import keras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import torch"
@@ -64,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +56,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,11 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision.datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p models"
    ]
   },
   {
@@ -391,15 +383,23 @@
     "        widen_factor=10,\n",
     "    ),\n",
     "    criterion=torch.nn.CrossEntropyLoss,\n",
-    "    batch_size=16,\n",
+    "    batch_size=32,\n",
     "    max_epochs=10,\n",
-    "    optimizer=torch.optim.Adam,\n",
+    "    optimizer=lambda params, lr: torch.optim.SGD(params, lr=lr, momentum=0.9, nesterov=True),\n",
     "    callbacks=[\n",
+    "        ('learning_rate_decay',\n",
+    "         skorch.callbacks.LRScheduler(\n",
+    "             policy=torch.optim.lr_scheduler.MultiStepLR,\n",
+    "             monitor=None,\n",
+    "             gamma=0.1,\n",
+    "             milestones=(150, 225)\n",
+    "         )\n",
+    "        ),\n",
     "        ('progress_bar', skorch.callbacks.ProgressBar()),\n",
     "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/wrn.pt\", monitor=None))\n",
     "    ],\n",
     "    device='cuda' if torch.cuda.is_available() else 'cpu',\n",
-    "    lr=1e-04,\n",
+    "    lr=0.1,\n",
     "    train_split=skorch.dataset.CVSplit(5, stratified=False),\n",
     ")\n",
     "net.initialize()"
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -464,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9ac99f7533549c4a754ccca1660866e",
+       "model_id": "c52a8e559fb04e00a768ba0086e24558",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,7 +477,16 @@
     }
    ],
    "source": [
-    "net.fit_loop(train_dataset, None, epochs=300)"
+    "net.fit(train_dataset, None, epochs=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# net.fit_loop(train_dataset, None, epochs=300)"
    ]
   }
  ],
